style.css
body {
  font-family: 'Roboto', sans-serif;
}
svg {
  display: block;
  width: 100%;
  height: 100%;
}

.line {
    fill: none;
    stroke-width: 1.5px;
    cursor: pointer;
    transition: opacity 0.3s;
}
.click-area {
    fill: none;
    stroke: transparent;
    stroke-width: 10px;
    cursor: pointer;
}
.axis path, .axis line {
    fill: none;
    shape-rendering: crispEdges;
}
.axis text {
    font-size: 12px;
}
.selection {
    fill: var(--boxSelectionBackgroundColor);
    stroke: var(--boxSelectionBorderColor);
    stroke-width: 1px;
    pointer-events: none;
}
button {
    margin: 20px;
    padding: 10px;
    font-size: 16px;
    cursor: pointer;
}

#timeline {
    width: 100%;
    height: 150px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.axis path,
.axis line {
    fill: none;
    stroke: var(--axesColor);
    shape-rendering: crispEdges;
}

.axis text {
    font-size: 12px;
}

.tooltip {
    position: absolute;
    background-color: var(--tooltipBackgroundColor);
    border: 1px solid var(--tooltipBorderColor);
    border-radius: 4px;
    padding: 5px;
    pointer-events: none;
    transition: opacity 0.3s;
    font-size: 12px;
}

.slider {
    cursor: grab;
}

#event-select {
    width: 200px;
    height: 100px; /* Adjust height to show multiple options */
}

.ganttbar {
    fill: var(--eventsColor);
    rx: 5; /* to make rounded corners on the Gantt bars */
    ry: 5;
}

.ganttbar:hover {
    cursor: pointer;
}

.orange-description{
    color: #D36135;
    font-weight: bold;
}

.green-description{
    color: #4C9079;
    font-weight: bold;
}

.oswald-description {
    font-family: "Oswald", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    text-align: center;
    margin-top: 10px;
}

.oswald-small {
    font-family: "Oswald", sans-serif;
    font-optical-sizing: auto;
    font-weight: bold;
    text-decoration: underline;
    font-style: normal;
    text-transform: uppercase;
    text-align: center;
    margin-top: 10px;
}

.oswald-big {
    font-family: "Oswald", sans-serif;
    font-weight: bold;
    font-style: normal;
    text-transform: uppercase;
    font-size: 30px;
}

.country.hovered {
    stroke: var(--mapCountryHoverColor);
    stroke-width: 3px;
}

.country.selected {
    stroke: var(--mapCountrySelectColor);
    stroke-width: 3px;
}

